# kiran-manual

./: .clang-format  .gitignore  .gitlab-ci.yml  .qmake.stash  CMakeLists.txt  Makefile  README.en.md  README.md  clang-format  install-location-define.cmake  kiran-manual.pro  km-config.qrc
conf/: km-config.json
data/: config.h.in  kiran-manual.desktop.in  km-config.ini  km-example.ini  km.ini
data/documents/markdowns/en_US/: Kiran-Desktop.md  caja.md  calculator.md  fqa.md  input-method.md  kiran-control-panel.md  pluma.md  screen-record.md  template-app1.md  template-app2.md  template-app3.md  template-app4.md  terminal.md  截图工具.md  文件管理器.md  文本编辑器.md  终端.md
data/documents/markdowns/zh_CN/: Kiran-Desktop.md  engrampa.md  filezilla.md  firefox.md  kiran-control-panel.md  kiran-panel.md  kiran-screensaver.md  kiran-software.md  template-app1.md  template-app2.md  template-app3.md  vnc-client.md  截图工具.md  文件管理器.md  文本编辑器.md  终端.md
data/manual-books/en_US/: CodeOnly_bad.md  fontManager.md  kiran-desktop.md  screenshot.md
data/manual-books/zh_CN/: CodeOnly.md  CodeOnly_bad.md  CodeOnly_good.md  appStore.md  fileManager.md  fontManager.md  kiran-desktop.md  movie.md  screenshot.md  terminal.md  获取文件状态函数.md
data/styles/: navigation.qss
forms/: article-pages.ui  articlepage.ui  home-page.ui  main-window.ui
html/: testFileName.html
resources/: MyTitle.css  kiran-manual-resources.qrc
src/: article-page.cpp  article-page.h  article-pages.cpp  article-pages.h  article.cpp  article.h  article.ui  base-window.cpp  base-window.h  code-highlighter.cpp  code-highlighter.h  constants.h  custom-title.cpp  custom-title.h  custom-title.ui  document.cpp  document.h  document.ui  highlighter.cpp  highlighter.h  home-page.cpp  home-page.h  km-config.qrc  main-window.cpp  main-window.h  main.cpp  markdown-parser.cpp  markdown-parser.h  my-titlebar.cpp  my-titlebar.h  navigation.cpp  navigation.h  navigation.ui  searcher.cpp  searcher.h  window.cpp  window.h  window.ui
src/doc-frame/: doc-frame.cpp  doc-frame.h
src/event-filter/: enter-filter.h
src/kiran-frame/: kiran-frame.cpp  kiran-frame.h
src/my-scroll-bar/: my-scroll-bar.cpp  my-scroll-bar.h  my-scroll-style.cpp  my-scroll-style.h
src/scroll-bar/: scroll-bar.cpp  scroll-bar.h  scroll-style.cpp  scroll-style.h
src/search-edit/: search-delegate.cpp  search-delegate.h  search-dialog.cpp  search-dialog.h  search-edit.cpp  search-edit.h  search-model.cpp  search-model.h
src/toc-tree/: toc-tree-item-delegate.cpp  toc-tree-item-delegate.h  toc-tree-style.cpp  toc-tree-style.h  toc-tree.cpp  toc-tree.h
translations/: kiran-manual.zh_CN.ts
